# geshi

./: .env.example  .gitignore  .gitmodules  .markdownlint.json  .tool-versions  AGENTS.md  LICENSE  Makefile  README.md  compose.scribe.yaml  compose.yaml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: check-commit-message.yml  ci.yml  crawler.yml  dependabot-auto-merge.yml  dependabot-automerge.yml  model.yml  pinact-check.yml  pinact.yml  pr-checks.yml  pr-geshi.yml  pr-summarizer.yml  pr-transcriber.yml  scribe-ci.yml  summarizer-py.yml  summarizer-ts.yml  transcriber-py.yml  transcriber-ts.yml  ui.yml
.roo/rules/: english_code_comments.json  japanese_response.json
backend/db/: schema.sql
backend/scripts/: backfill-collector-settings.ts  start-workers.sh
backend/src/: app.ts  deps.ts  index.ts  runtime-config.ts  worker.ts
backend/test/: app.test.ts  job-api.test.ts  job-register.test.ts  job-runtime-bullmq.test.ts
cli/src/: index.ts
cmd/: geshi.ts
db/: schema.sql
db/data-migrations/: 0014-source-subscriptions.sql
docs/: backend-bullmq-development.md  backend-development.md  concept.md  data-model.md  development-flow.md  development.md  frontend-development.md  job-queue.md  job.md  logging-guidelines.md  logging.md  migration.md  model-design-principal.md  models.md  plugin.md  storage.md  system-architecture.md
docs/acceptance/: 0001-source-registration-foundation.md  0002-source-crawl-foundation.md  0004-e2e-foundation.md  (+17 more)
frontend/: index.html  tsconfig.json  vite.config.ts
geshi/: .eslintrc.js  .eslintrc.json  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
internal/: geshi-config.ts
scribe/: README.md  pyproject.toml
scripts/: run-data-migration.sh  start-backend.sh  start-frontend.sh  start-process.sh  start-worker.sh  start-workers.sh  stop-backend.sh  stop-frontend.sh  stop-process.sh  stop-worker.sh  stop-workers.sh
src/: index.ts
summarizer/: .gitignore  README.md  pyproject.toml
summarizer/docs/: api-spec.json
summarizer/src/: __init__.py  main.py  summarization.py  summarizer.py  worker.py
summarizer/tests/: test_main.py
test/: compose.test.yaml  index.test.ts  playwright.config.ts
transcriber/: .gitignore  README.md  pyproject.toml
transcriber/docs/: api-spec.json
transcriber/src/: __init__.py  main.py  scheduler.py  transcriber.py  transcription.py  worker.py
transcriber/tests/: test_main.py  test_scheduler.py  test_transcription.py
(+432 files in other folders)
