[project]
name = "scribe"
version = "0.1.0"
description = "Audio transcription and text summarization service"
authors = [{ name = "t-ashula" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.27.0,<0.28.0",
    "pydantic>=2.11.7,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "python-multipart>=0.0.20,<0.1.0",
    "redis>=6.2.0,<7.0.0",
    "rq>=1.15.1,<2.0.0",
    "rq-scheduler>=0.13.1,<0.14.0",
    "python-magic>=0.4.27,<0.5.0",
    "python-ulid>=3.0.0,<4.0.0",
    "transformers>=4.53.2,<5.0.0",
    "torch>=2.7.1,<3.0.0",
    "punctuators>=0.0.7,<0.1.0",
    "stable-ts>=2.19.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "black>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "mypy>=1.16.1,<2.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
